--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "nodemon server.js"
+ "scripts": {
+    "start": "node server.js",
+    "start:dev": "nodemon server.js"  
   },
   "keywords": [],
   "author": "",
